--- a/index.html
+++ b/index.html
@@ -11,12 +11,21 @@
 <body>
 
     <!--comment--> 
+    <h1>
+        doodoo
+    </h1>
+
+    <h2>
+        hey (h2)
+    </h2>
 
     <h3>
-        TEXT TAG
+        MY WEBSITEEE
     </h3>
 
-    <p> baby text </p>
+    <p> small text 
+        hello 
+    </p>
 
 </body>
 
